more typewriter font for code.

--- a/proto1.tex
+++ b/proto1.tex
@@ -546,8 +546,10 @@ Classes in \progLang{Haskell} are like containers with certain properties which 
 instance of a class the function(s) can be applied to each element / primitive in the data type.
 
 
-The data here is the \progLang{Prolog} abstract syntax and the containers are \textit{Functor, Foldable, Traversable, Applicative} 
-and \textit{Monad}.     
+The data here is the \progLang{Prolog} abstract syntax and the containers are
+\Verb!Functor!, \Verb!Foldable!, \Verb!Traversable!, \Verb!Applicative!
+  and
+\Verb!Monad!.
 
 \clearpage
 
