--- a/proto1.tex
+++ b/proto1.tex
@@ -21,7 +21,7 @@ This chapter discusses the aspects of opening a language while preserving the or
 \progLang{Haskell}. Also discussed are the issues related to customizing certain aspects such as meta-syntactic variables.
 \end{comment}
 
-This chapter demonstrates a "fairly generic"\endnote{%
+This chapter demonstrates a ``fairly generic''\endnote{%
   Use ``quote likes shown'', not "quotes like this".
 
   Really try to avoid hedging your bets with scare-quotes.
@@ -38,12 +38,12 @@ mentioned above.
 \begin{enumerate}
 \item \progLang{Prolog}
 
-The language itself has a number of sub components,\endnote{%
+The language itself has a number of sub components.\endnote{%
   This is known as a comma splice.  You have a sentence before, and a
   sentence after the comma.  Either use a semicolon, or write two
   sentences.
 }
-the ones relevant to this thesis are,
+The ones relevant to this thesis are,
 \begin{enumerate}
 \item Language, the syntax, semantics.
 
@@ -51,7 +51,10 @@ the ones relevant to this thesis are,
 
 \item Unification
 
-\item The search strategy which is used to list and accomplish goals.\endnote{%
+\item \progLang{Prolog} has to satisfy a list of goals while maintaining variable bindings and choice points. For a non empty list of 
+list of goals, it looks through the knowledge base for matching rules and attempts at unifying the terms and repeats until all goals 
+have been satisfied. If more than one option is available, they are recorded as choice points which are later used for 
+backtracking and finding other possible solutions.\endnote{%
   What does ``accomplish goals'' mean here?  Is this what
   is called \Verb!getClauses! in \codeLibrary{prolog-0.2.1}\,?
 }
@@ -72,7 +75,7 @@ implementation providing certain components to exercise our approach. The main c
 
 \item Unifier
 
-\item REPL\endnote{%
+\item Read-Eval-Print Loop(REPL)\endnote{%
   Do not expect readers to know what a \textsf{REPL} is.
 }
 
@@ -86,18 +89,18 @@ generic unification algorithm implementation.
 
 The relevant components are,
 \begin{enumerate}
-\item Unifiable Class\endnote{%
+\item The \Verb!Unifiable! class\endnote{%
   replace with ``the \Verb!Unifiable! class.
 }
 
-\item the \Verb!UTerm! data type
+\item The \Verb!UTerm! data type
 
 \item Variables\endnote{%
   what does this reference?
 },
   \Verb!STVar!, \Verb!IntVar!
 
-\item the \Verb!Binding! monad
+\item The \Verb!Binding! monad
 
 \item Unification (\Verb!unify! and \Verb!unifyOccurs!)
 \end{enumerate}
@@ -117,6 +120,7 @@ The implementation consists of the following components,
 
 \item Variable Bindings\endnote{%
   What are your conventions for when you use capitals, and when not?
+  Not yet decided.
 }
 
 \item Monadic Unification
@@ -127,7 +131,7 @@ The implementation consists of the following components,
 Each of the components are discussed in the following sections.
 
 
-\section{How Prolog works ?}
+\section{How Prolog works}
 
 \textcolor{red}{Drop the ``?'' in the section title}
 
@@ -137,6 +141,8 @@ To replicate \progLang{Prolog} we look into how it works \cite{webiste:learnprol
   high-level view.  Below, we are in the middle of discussing a syntax feature called terms.
   Below I would simplify, and just write ``\progLang{Prolog} has three types of terms:''.
 }
+
+As any other language we start with the syntax and semantics. We begin with the programming constructs of the language.
 
 Most \progLang{Prolog} distributions have three types of terms:
 \begin{enumerate}
@@ -250,7 +256,7 @@ and so on. A static type system requires types to be attached to the programming
 compile time and thus increase the reliability of the program. The other end is the dynamic type system which passes through code which
 would not have worked in former environment, it comes of as less rigid.
 
-\textcolor{red}{Why do we need the following two paragraphs?}
+\textcolor{red}{Why do we need the following two paragraphs? To talk about the type systems of the languages}
 
 The advantages of static typing \cite{meijer2004static}
 \begin{enumerate}
@@ -268,14 +274,14 @@ For dynamic typing
 \item Re-usability
 \end{enumerate}
 
-Since \progLang{Haskell} is statically type we would need to define a "typed" language which would have a
+Since \progLang{Haskell} is statically type we would need to define a "typed" language which should have a
 number of constructs representing different terms in \progLang{Prolog} such as complex structures (for example
 predicates, clauses etc.), don't cares, cuts, variables and so on.\endnote{%
   Drop the ``would''s here.  We \textit{do} need to define a \progLang{Prolog} type.
 }
 
-Consider the language \yyy{below}{in Figure~\ref{tab:closed-terms}} which has been adopted from
-\cite{prolog-lib}\yyy{,}{.}
+Consider the language {in Figure~\ref{tab:closed-terms}} which has been adopted from
+\cite{prolog-lib}.
 
 \begin{figure}
 \begin{minted}[linenos]{haskell}
@@ -314,15 +320,16 @@ The \xxx{above} data type \yyy{}{Figure~\ref{tab:closed-terms}} is recursive as 
 \mint{haskell}|Struct Atom [Term]|
 \end{comment}
 
-\yyy{The above}{Figure~\ref{tab:closed-terms}} is a classic example of a recursive grammar to define the
+Figure~\ref{tab:closed-terms} is a classic example of using a recursive data type to define the
 abstract syntax of a language.\endnote{%
   ``is a classic example of \yyy{}{using a recursive data type} \xxx{a recursive grammar} to define the
 abstract syntax of a language.'' --- perhaps?
 }
-One of the issues with the above \yyy{}{datatype} is that it is not possible to distinguish the structure of the data from the
+One of the issues with the above datatype is that it is not possible to distinguish the structure of the data from the
 data type itself \cite{sheard2004two}.
 Moreover, the primitives of the language\endnote{%
   What do you mean by ``primitives of the language''?
+  Adopted from \cite{website:understandingalgebrasfpcomplete}
 }
 are not accessible as the language can have expressions of only one
 type i.e.
@@ -342,11 +349,14 @@ data Term = Struct Atom [Term]
 Also one cannot create Quantifiers plus logic
 \end{comment}
 
+\begin{comment}
 The solution \xxx{to} would be to add a type constructor split the data type into two levels, a single recursive
-data type is replaced by two related data types.\endnote{%
+data type is replaced by two related data types.
+\end{comment}\endnote{%
   I cannot follow this sentence.
+I do not know what I was thinking
 }
-Consider the \yyy{\mbox{following},}{code in Figure~\ref{tab:non-recurse}.}
+Consider the code in Figure~\ref{tab:non-recurse}
 \begin{figure}
   \begin{minted}[gobble=3,linenos]{haskell}
     data FlatTerm a = Struct Atom [a]
@@ -360,20 +370,22 @@ Consider the \yyy{\mbox{following},}{code in Figure~\ref{tab:non-recurse}.}
 \end{figure}
 
 One result of the approach is that the non-recursive type
-\textit{FlatTerm} is modular and generic as the structure
+\textt{FlatTerm} is modular and generic as the structure
 "FlatTerm"\endnote{%
   You have `\textit{FlatTerm}' and `"FlatTerm"'.  Why not \texttt{FlatTerm} or better yet
   \texttt{\csname @backslashchar\endcsname code\{FlatTerm\}}, where \texttt{\csname @backslashchar\endcsname code} is a macro you define.
 }
 is separate
-from it's\endnote{%
+from its\endnote{%
   Do you understand why ``it's'' should be ``its'' here?
+  Yes
 }
 type which is "a".
 The above language can be of any type \textit{a}. A more accurate way of saying it would be that \textit{a} can be a \textit{kind} in
 \progLang{Haskell}.\endnote{%
   Why do we explain \textit{kinds}?
   Is this in preparation for \texttt{\bfseries Functor}?
+  Well Int, String etc etc are kinds in haskell so a FlatTerm int where int is *
 }
 
 In type theory, a kind is the type of a type constructor or, less commonly, the type of a higher-order type operator. A kind system is
@@ -392,10 +404,11 @@ a -> a :: *
 Simply speaking we can have something like
 \mint{haskell}|FlatTerm Bool|
 
-and a generic fu\xxx{i}nction like,
-\mint{haskell}|map :: (a -> b) -> FlatTerm a -> FlatTerm b|
+and a generic function like,
+\mint{haskell}|function :: (a -> b) -> FlatTerm a -> FlatTerm b|
 \textcolor{green}{%
   Why is this {\color{blue}\Verb|map|} rather than {\color{blue}\Verb|fmap|}\,?
+  I think this is more to say all terms in the language can be (FlatTerm a) and not (FlatTerm (FlatTerm (FlatTerm ....)))
 }
 
 Although one problem remains, how does one represent infinitely nested / deep expressions of the above language, for example something of
@@ -412,12 +425,14 @@ because with our original grammar all the expression that could be defined would
 infinitely deep they were.
 
 The approach to tackling this problem is to find the "fixed-point".
-After infinitely many iterations we should get to a \yyy{fix}{fixed} point where further iterations make no
+After infinitely many iterations we should get to a fixed point where further iterations make no
 difference.
 It means that applying one more ExprF would not change anything – a fix point does not move under FlatTerm.
 
 \progLang{Haskell} provides it in two forms,\endnote{%
   Why do you need to discuss value fixed points (\textit{i.e.,} \texttt{\bfseries fix})?  Do you need them?
+  
+  Well not really but since we are talking about fixed point in general
 }
 \begin{enumerate}
 
@@ -455,7 +470,7 @@ Generically speaking, the language can be expanded for additional functionality 
 the scenario where the language needs to accommodate additional type of terms,
 
 \begin{enumerate}
-\item Manually modifying the structure of the language, \yyy{}{as shown in Figure~\ref{tab:man-enhan-gram}.}
+\item Manually modifying the structure of the language, as shown in Figure~\ref{tab:man-enhan-gram}
   \begin{figure}
     \begin{minted}[linenos,gobble=5]{haskell}
       type Atom            = String
@@ -475,7 +490,7 @@ the scenario where the language needs to accommodate additional type of terms,
     \label{tab:man-enhan-gram}
   \end{figure}
 
-This would then trigger a ripple effect thorughout the architecture because accomodations need to be made for the new functionality.
+This would then trigger a ripple effect throughout the architecture because accommodations need to be made for the new functionality.
 
 \item The other option would be to \textit{functorize} language like we did by adding a type variable which can be used to plug something that provides the functionality into the language.
 Consider the following example,
@@ -572,8 +587,10 @@ between a functor and a monad.
 
 We create the necessary instances\endnote{%
   I am deeply suspicious of the instance for \texttt{Applicative} given.
+  
+  I agree, I think I just created one for the purpose of the diagram.
 }
-as \yyy{follows,}{shown in Figure~\ref{tab:flat-term-class-inst}.}
+as shown in Figure~\ref{tab:flat-term-class-inst}.
 \begin{figure}
   \begin{minted}[linenos,gobble=4]{haskell}
     instance Functor (FlatTerm) where
@@ -603,7 +620,7 @@ as \yyy{follows,}{shown in Figure~\ref{tab:flat-term-class-inst}.}
 
 The above lay the foundation to work with the library.
 Coming back to the library, the language must have the \Verb!Unifiable! instance.
-This works in \yyy{tandom}{tandem} with the \Verb!UTerm! data type.
+This works in tandem with the \Verb!UTerm! data type.
 The \Verb!UTerm! data type captures the recursive structure of logic terms i.e, given some functor \(t\) which describes the
 constructors of our logic terms, and some type \(v\) which describes our logic variables, the type
 \Verb!UTerm! \(t\) \(v\) is the
@@ -667,7 +684,7 @@ You can provide your own implementations of Variable and BindingMonad.
 This implementation uses STVars but a custom implementation can be used inside the BindingMonad.
 For our language expressions to be unifiable we must deal with the variables in the expressions being compared. For that we extract the
 variables and then convert them into a dictionary consisting of a free
-variable for each language variable\yyy{.}{as shown in Figure~\ref{tab:varsToDictM}.}
+variable for each language variable as shown in Figure~\ref{tab:varsToDictM}.
 
 \begin{figure}
   \begin{minted}[linenos,gobble=2]{haskell}
@@ -702,7 +719,7 @@ variable for each language variable\yyy{.}{as shown in Figure~\ref{tab:varsToDic
 \end{figure}
 A language to STVar dictionary is only one part of the unification procedure, the terms themselves should be made
 compatible for the in built unify procedure to perform look ups for the variables in them.
-The dictionary along with the fixed point version flattened of the term\yyy{}{, as shown in Figure~\ref{tab:to-UTerm}}
+The dictionary along with the fixed point version flattened of the term, as shown in Figure~\ref{tab:to-UTerm}.
 %
 \begin{figure}
   \begin{minted}[linenos,gobble=2]{haskell}
@@ -734,7 +751,7 @@ The dictionary along with the fixed point version flattened of the term\yyy{}{, 
   \label{tab:to-UTerm}
 \end{figure}
 %
-and for later use to convert them back, \yyy{}{as shown in Figure~\ref{tab:from-UTerm}.} 
+and for later use to convert them back, as shown in Figure~\ref{tab:from-UTerm}. 
 %
 \begin{figure}
   \begin{minted}[linenos,gobble=2]{haskell}
@@ -764,8 +781,7 @@ and for later use to convert them back, \yyy{}{as shown in Figure~\ref{tab:from-
 \end{figure}
 
 \clearpage
-The variable dictionaries and UTermified language expressions are unified in the binding monad.
-\yyy{}{as shown in Figure~\ref{tab:unification} and Figure~\ref{tab:unif-driver}.}
+The variable dictionaries and UTermified language expressions are unified in the binding monad as shown in Figure~\ref{tab:unification} and Figure~\ref{tab:unif-driver}.
 %
 \begin{figure}
 \begin{minted}[linenos]{haskell}
@@ -812,10 +828,9 @@ goUnify test = ST.runSTBinding $ do
 \end{figure}
 
 
-The final reconversion to return a list of substitutions\yyy{}{,
+The final reconversion to return a list of substitutions, 
   called \texttt{f1} in Figure~\ref{tab:unif-driver}, is shown in
   Figure~\ref{tab:vars-extract}.
-}
 \begin{figure}
   \begin{minted}[linenos,gobble=2]{haskell}
   f1 ::
