Added some stuff to proto2.1

--- a/proto1.tex
+++ b/proto1.tex
@@ -370,7 +370,7 @@ Consider the code in Figure~\ref{tab:non-recurse}
 \end{figure}
 
 One result of the approach is that the non-recursive type
-\textt{FlatTerm} is modular and generic as the structure
+\texttt{FlatTerm} is modular and generic as the structure
 "FlatTerm"\endnote{%
   You have `\textit{FlatTerm}' and `"FlatTerm"'.  Why not \texttt{FlatTerm} or better yet
   \texttt{\csname @backslashchar\endcsname code\{FlatTerm\}}, where \texttt{\csname @backslashchar\endcsname code} is a macro you define.
