Fixed a bad interaction between \end{comment} and \endnote{

--- a/proto1.tex
+++ b/proto1.tex
@@ -352,7 +352,8 @@ Also one cannot create Quantifiers plus logic
 \begin{comment}
 The solution \xxx{to} would be to add a type constructor split the data type into two levels, a single recursive
 data type is replaced by two related data types.
-\end{comment}\endnote{%
+\end{comment}
+\endnote{%
   I cannot follow this sentence.
 I do not know what I was thinking
 }
